[project]
name = "yubivault"
version = "0.1.0"
description = "Local CLI password manager protected by a YubiKey (FIDO2 hmac-secret)."
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44",
    "argon2-cffi>=23",
    "fido2>=2.0",
    "pynacl>=1.5",
    "click>=8",
]

[project.scripts]
yubivault = "yubivault.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yubivault*"]
